<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>unipept</groupId>
	<artifactId>unipept</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<build>
		<resources>
			<resource>
				<directory>${basedir}/src/main/java</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>${basedir}/src/test/java</directory>
			</testResource>
			<testResource>
				<directory>${basedir}/src/test/resources</directory>
				<includes>
                    <include>**/*.*</include>
                </includes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.31</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
	</dependencies>
	<name>Unipept</name>
	<url>https://github.ugent.be/bmesuere/unipept</url>
	<description>The Unipept web application supports biodiversity analysis of large and complex metaproteome samples. </description>
	<scm>
		<url>https://github.ugent.be/bmesuere/unipept.git</url>
	</scm>
</project>
